--- a/style.css
+++ b/style.css
@@ -58,6 +58,13 @@
     flex-direction: column;
     justify-content: center;
     width: 300px;
+    height: 240px;
+}
+
+.v-scrolling-div {
+    overflow-y: scroll;
+    overflow-x: hidden;
+
 }
 
 .coffee{
@@ -73,3 +80,4 @@
 .selected{
     border: 2px solid green;
 }
+
